--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,19 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="daily_load">"Дневная нагрузка"</string>
+    <string name="about_us">"О программе"</string>
+    <string name="calc">"Прайс и калькулятор"</string>
+
+
+    <string name="sign_in">"Войти"</string>
+    <string name="cancel">"Отмена"</string>
+    <string name="missing_pass">"Забыли пароль?"</string>
+    <string name="login">"логин"</string>
+    <string name="pass">"пароль"</string>
+
+
+
+
 </resources>
