Add detail Task view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="repeat">"Повтор"</string>
     <string name="transfer">"Перенос"</string>
 
+    <string name="status">"Назначено"</string>
+
 
 
 </resources>
